# RubiksCube

./: .gitignore  CMakeLists.txt
src/: HelloWorld.cpp  HelloWorld.h  main.cpp
tests/: HelloWorld.cpp
